--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+0.9636 2022-08-05
+  [Improve Compilation Error Messages]
+    * Improve compillation error messages in many places.
+  [Bug Fix]
+    * Fix the bug that the array initialization compilation error is not detected.
+  [Incompatible Changes]
+    * Fix the bug that the array initialization compilation error is not detected.
+      For the reason of this, A compilation error occurs in the following code.
+      {"foo" => 1, "bar"}
 0.9635 2022-08-05
   [New Features]
     * If the depth of the method call is over 10000, an exception is thrown.
