--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     * Improve compillation error messages in many places.
   [Bug Fix]
     * Fix the bug that the array initialization compilation error is not detected.
+    * Fix the bug that non-interface type can be specified the operand of the interface statement.
   [Incompatible Changes]
     * Fix the bug that the array initialization compilation error is not detected.
       For the reason of this, A compilation error occurs in the following code.
