--- a/Changes
+++ b/Changes
@@ -1,3 +1,20 @@
+0.9636 2022-08-08
+  [New Features]
+    * Add the following native API.
+    
+      const char* (*dumpc)(SPVM_ENV* env, SPVM_VALUE* stack, void* object);
+  
+  [Improve Compilation Error Messages]
+    * Improve compillation error messages in many places.
+  [Bug Fix]
+    * Fix the bug that the array initialization compilation error is not detected.
+    * Fix the bug that non-interface type can be specified the operand of the interface statement.
+  [Test]
+    * Add many tests of compilation errors.
+  [Incompatible Changes]
+    * Fix the bug that the array initialization compilation error is not detected.
+      For the reason of this, A compilation error occurs in the following code.
+      {"foo" => 1, "bar"}
 0.9635 2022-08-05
   [New Features]
     * If the depth of the method call is over 10000, an exception is thrown.
