--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 0.9638 2022-08-09
-  [Compilation Error Message]
+  [Compilation Error Message Improvement]
     * Improve compilation error messages.
   [Ineffective Changes]
     * The refcnt operator receive an operater instead of a variable.
