--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.9638 2022-08-09
+  [Fix Bug]
+    * Fix the bug that spvmdist command can't show help
   [Compilation Error Message Improvement]
     * Improve compilation error messages.
     * Fix wrong compilation error messages.
