Add the is_type operator.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9639 2022-08-10
+  [New Features]
+    * Add the is_type operator.
 0.9638 2022-08-10
   [Fix Bug]
     * Fix the bug that spvmdist command can't show help
