--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
     * Add void Returning Operator Statement.
   [Internal Ineffective Changes]
     * Revmoe unneeded SPVM_OP_C_ID_ELEMENT, SPVM_OP_C_ID_OARRAY, SPVM_OP_C_ID_SET, SPVM_OP_C_ID_GET ops.
+    * Rename SPVM_OP_C_ID_NULL to SPVM_OP_C_ID_DO_NOTHING
 0.9639 2022-08-15
   [New Features]
     * Add the is_type operator.
