--- a/Changes
+++ b/Changes
@@ -9,6 +9,7 @@
     * Rename SPVM_OP_C_ID_NULL to SPVM_OP_C_ID_DO_NOTHING.
     * Remove SPVM_OP_C_ID_STAB.
     * Remove SPVM_OP_C_ID_PRECOMPILE, SPVM_OP_C_ID_RW, SPVM_OP_C_ID_RO, SPVM_OP_C_ID_WO, SPVM_OP_C_ID_REQUIRED.
+    * Remove SPVM_OP_C_ID_SELF.
     * Reorder ops.
 0.9639 2022-08-15
   [New Features]
