--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@
     * Rename the headding "empty Statement" to "Empty Statement".
     * Rename Operation Statement to Operator Statement.
     * Add void Returning Operator Statement.
+  [Document Improvement]
+    * Method Call becomes headding 1.
   [Internal Ineffective Changes]
     * Revmoe unneeded SPVM_OP_C_ID_ELEMENT, SPVM_OP_C_ID_OARRAY, SPVM_OP_C_ID_SET, SPVM_OP_C_ID_GET ops.
     * Rename SPVM_OP_C_ID_NULL to SPVM_OP_C_ID_DO_NOTHING.
