--- a/Changes
+++ b/Changes
@@ -14,6 +14,8 @@
     * Remove SPVM_OP_C_ID_SELF.
     * Remove SPVM_OP_C_ID_BLOCK_END.
     * Reorder ops.
+    * The part of spvm_api.c and spvm_api.h is separated to spvm_vm.c and spvm_vm.h.
+    * SPVM_API_call_spvm_method_vm in spvm_api.c is renamed to SPVM_VM_call_spvm_method_vm in spvm_vm.c.
 0.9639 2022-08-15
   [New Features]
     * Add the is_type operator.
