--- a/Changes
+++ b/Changes
@@ -1,12 +1,19 @@
 0.9641 2022-08-17
   [New Features]
+    * Add the following methods to Fn class.
+      static method is_class : int ($object : object)
+      static method is_class : int ($object : object)
+    
     * Add the following runtime native APIs.
     
       int32_t (*get_class_is_pointer)(void* runtime, int32_t class_id);
+      
     * Add the following native APIs.
     
       int32_t (*is_class)(SPVM_ENV* env, SPVM_VALUE* stack, void* object);
       int32_t (*is_pointer_class)(SPVM_ENV* env, SPVM_VALUE* stack, void* object);
+  [Document Fix]
+    * Remove the headding "Pointer Type" and add "Pointer Class".
 
 0.9640 2022-08-16
   [New Features]
