--- a/Changes
+++ b/Changes
@@ -19,6 +19,7 @@
   [Internal Ineffective Changes]
     * In SPVM::Builder::Util::need_generate, SPVM core source files are searched from SPVM::Builder::Util path instead fo SPVM::Builder path.
     * Add SPVM::Builder::Util::get_spvm_core_files and use it from SPVM::Builder::Util::need_generate.
+    * Remove the tail slash of builder dir in SPVM::Builder::Util::get_spvm_core_files.
 0.9640 2022-08-16
   [New Features]
     * Add the following native APIs.
