--- a/Changes
+++ b/Changes
@@ -23,6 +23,7 @@
     * Add SPVM::Builder::Util::get_spvm_core_files and use it from SPVM::Builder::Util::need_generate.
     * Remove the tail slash of builder dir in SPVM::Builder::Util::get_spvm_core_files.
     * Add shared error messages to spvm_precompile.c
+    * The names of the opcodes become upper case again.
 0.9640 2022-08-16
   [New Features]
     * Add the following native APIs.
