--- a/Changes
+++ b/Changes
@@ -12,6 +12,10 @@
     
       int32_t (*is_class)(SPVM_ENV* env, SPVM_VALUE* stack, void* object);
       int32_t (*is_pointer_class)(SPVM_ENV* env, SPVM_VALUE* stack, void* object);
+  [Improvement Exception Messages]
+    * Improve many exception messages.
+  [Exception Messages Fix]
+    * Fix many exception messages.
   [Chagnes]
     * SPVM::Builder::Util::API::create_make_rule_native and SPVM::Builder::Util::API::create_make_rule_precompile output SPVM core files dependency.
   [Document Fix]
