--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 0.9643 2022-08-18
+  [Revert]
+    * Revert the following changes.
+      0.9642 2022-08-17
+        [Chagnes]
+          * SPVM::Builder::Util::API::create_make_rule_native and SPVM::Builder::Util::API::create_make_rule_precompile output SPVM core files dependency.
   [Compilation Error Messages Improvement]
     * Improve the following compilation error message.
       
