--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 0.9644 2022-08-18
+  [Document Improvement]
+    * Add heading "Conditional Branch"
+    * Add heading "Loop Syntax"
   [Test Improvement]
     * Cleanup tests for statements.
       if.t unless.t -> conditional_branch.t
