--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
       "Empty Statement"
       "Operator Statement"
       "void Returning Operator Statement"
+    * Improve multi-dimentional array representation from [][]... to []...[]
     
   [Test Improvement]
     * Cleanup tests for statements.
