Add the following functions to "spvm_basic_type.c"
  [Internal Ineffective Changes]
    * Add the following functions to "spvm_basic_type.c"
      int32_t SPVM_BASIC_TYPE_is_integral_type_within_int(SPVM_COMPILER* compiler, int32_t basic_type_id);
    * Add the following functions to "spvm_type.c"
      int32_t SPVM_TYPE_is_integral_type_within_int(SPVM_COMPILER* compiler, int32_t basic_type_id, int32_t dimension, int32_t flag);

--- a/Changes
+++ b/Changes
@@ -26,6 +26,11 @@
       The private method \"%s\" can't be called at %s line %d
       [After]
       The private method \"%s\" in the class \"%s\" can't be called
+  [Internal Ineffective Changes]
+    * Add the following functions to "spvm_basic_type.c"
+      int32_t SPVM_BASIC_TYPE_is_integral_type_within_int(SPVM_COMPILER* compiler, int32_t basic_type_id);
+    * Add the following functions to "spvm_type.c"
+      int32_t SPVM_TYPE_is_integral_type_within_int(SPVM_COMPILER* compiler, int32_t basic_type_id, int32_t dimension, int32_t flag);    
 0.9643 2022-08-18
   [Revert]
     * Revert the following changes.
